# gba-project

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: CommonTools.cmake
scripts/: Dockerfile  build.ps1  build.sh  variables.ps1  variables.sh
src/: main.cpp
src/system/: CMakeLists.txt
src/system/interface/system/: System.hpp
src/system/src/: System.cpp
